--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,2 +1,2 @@
 JWT_SECRET=THIS_IS_MY_VERY_STRONG_AND_UNIQUE_SECRET_FOR_STUALUM
-GEMINI_API_KEY=AIzaSyAcQ7PVJWkOcynu6myLDOcfT99c-Rgeqqk
+GEMINI_API_KEY=
