--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mailersend": "^2.6.0",
     "mongoose": "^8.18.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "openai": "^6.8.1"
   }
 }
